<resources>
    <string name="app_name">Willamette-Thesis</string>
    <string name="action_settings">Settings</string>
    <string name="selected_item">Selected item:</string>

    <string name="profile">Your\nProfile</string>
    <string name="since">User Since </string>
    <string name="changeCarType">Change Car Type to: </string>

    <string name="logout_str">Logout</string>
    <string name="login_str">Login</string>

    <string name="carbon_fp_text">Carbon Footprint</string>

    <string name="car_miles">Car Miles: </string>
    <string name="bus_miles">Bus Miles: </string>
    <string name="plane_miles">Plane Miles: </string>
    <string name="walk_miles">Walk Miles: </string>

    <string name="themeNature">nature</string>
    <string name="themeDefault">original</string>

<!--    Calendar-->
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>

    <string name="dark">Dark</string>

    <string-array name="WaterSizes">
        <item>8 oz</item>
        <item>12 oz</item>
        <item>16.9 oz</item>
        <item>20 oz</item>
        <item>24 oz</item>
        <item>33.8 oz</item>
        <item>36 oz</item>
    </string-array>

    <string-array name="style_options">
        <item>Original</item>
        <item>Nature</item>
        <item>Blue</item>
        <item>Orange</item>
        <item>Dark</item>

    </string-array>

    <string-array name="carTypes">
        <item>Average</item>
        <item>Coupe</item>
        <item>Convertible</item>
        <item>Sedan</item>
        <item>Wagon</item>
        <item>4dr Hatchback</item>
        <item>2dr Hatchback</item>
        <item>4dr SUV</item>
        <item>2dr SUV</item>
        <item>Convertible SUV</item>
        <item>Passenger Minivan</item>
        <item>Cargo Minivan</item>
        <item>Cargo Van</item>
        <item>Passenger Van</item>
        <item>Crew Cab Pickup</item>
        <item>Regular Cab Pickup</item>
        <item>Extended Cab Pickup</item>
    </string-array>

    <string-array name="carMileage">
        <item>19.73</item>
        <item>17.76</item>
        <item>18.05</item>
        <item>21.67</item>
        <item>21.60</item>
        <item>31.73</item>
        <item>23.90</item>
        <item>18.47</item>
        <item>14.49</item>
        <item>20.21</item>
        <item>16.96</item>
        <item>18.85</item>
        <item>12.74</item>
        <item>12.52</item>
        <item>15.63</item>
        <item>15.74</item>
        <item>15.32</item>
    </string-array>

    <string-array name="fuelTypes">
        <item>Average</item>
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="fuelRate">
        <item>21.25</item>
        <item>20.0</item>
        <item>22.5</item>
    </string-array>

    <string name="null_int">0</string>


    <string name="water_button">Water Button</string>
    <string name="gas_button">Gas Button</string>
    <!--    <string name="default_int_value">0</string>-->

    <string name="title_data_display">data_display</string>
    <string name="transportation">Transportation</string>
    <string name="line_">------------------------</string>
    <string name="miles">Miles</string>
    <string name="main_description">Pick a category to start recording your daily activities</string>
    <string name="title_activity_waste">activity_waste</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">com.example.willamette_thesis</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.example.willamette_thesis</string>
    <!-- Twitter consumer key and secret -->


</resources>
