<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/travelTotalVals"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/car_miles"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/carTotalVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/null_int"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/bus_miles"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/busTotalVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/null_int"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/plane_miles"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/planeTotalVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/null_int"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/walk_miles"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/walkTotalVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/displayPrimary"
                android:text="@string/null_int"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalMilesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelTotalVals"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/displaySecondary"
            android:text="Total Miles: "
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/totalMilesVar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/displaySecondary"
            android:text="@string/null_int"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/carbonFootprintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalMilesLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/displaySecondary"
            android:text="Carbon Footprint:"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/carbonFootrpintVar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/displaySecondary"
            android:text="@string/null_int"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>