<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<!--    <com.google.android.material.tabs.TabLayout-->
<!--        android:id="@+id/todayTabLayout"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <com.google.android.material.tabs.TabItem-->
<!--            android:id="@+id/todayTab"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Today" />-->

<!--        <com.google.android.material.tabs.TabItem-->
<!--            android:id="@+id/calendarTab"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Calendar" />-->

<!--&lt;!&ndash;        <com.google.android.material.tabs.TabItem&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:text="Wednesday" />&ndash;&gt;-->
<!--    </com.google.android.material.tabs.TabLayout>-->

    <LinearLayout
        android:id="@+id/todayLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/travelTotalVals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_miles"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/carTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bus_miles"
                    style="@style/MetricsDisplay"  />

                <TextView
                    android:id="@+id/busTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plane_miles"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/planeTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/walk_miles"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/walkTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalMilesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total Miles: "
                style="@style/TotalDisplay.LargeSize" />

            <TextView
                android:id="@+id/totalMilesVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/null_int"
                style="@style/TotalDisplay.LargeSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/carbonFootprintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Carbon Footprint:"
                style="@style/TotalDisplay.LargeSize" />

            <TextView
                android:id="@+id/carbonFootrpintVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/null_int"
                style="@style/TotalDisplay.LargeSize"/>
        </LinearLayout>

        <!--TOTAL-->

        <LinearLayout
            android:id="@+id/totalWasteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Total Trash:"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/trashTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/consumLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Plastic Total:"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/plasticsTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay"  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Recycling Total:"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/recycleTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cowTotalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Bovine Total"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/cowTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chickenTotalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Chicken Total"
                    style="@style/MetricsDisplay" />

                <TextView
                    android:id="@+id/chickenTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pig \nTotal:"
                    style="@style/MetricsDisplay"  />

                <TextView
                    android:id="@+id/pigTotalVar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/null_int"
                    style="@style/MetricsDisplay"  />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/waterFootprintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Water Footprint:"
                style="@style/TotalDisplay.LargeSize" />

            <TextView
                android:id="@+id/waterFpVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/null_int"
                style="@style/TotalDisplay.LargeSize" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>